[package]
name = "rpp-nudger"
version = "0.0.1"
authors = ["Kirill I. <elephanttalk@protonmail.com>"]


[dependencies]
regex = "0.1"

[dependencies.clap]
version = "2"
default-features = false
features = ["unstable"]

# The release profile, used for `cargo build --release`
[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
